# avito-test-task

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
tenders/: __init__.py  __main__.py
tenders/config/: default.py  utils.py
tenders/db/connection/: session.py
tenders/db/enums/: __init__.py  bid_status.py  creator_type.py  decision.py  organization_type.py  service_type.py  tender_status.py
tenders/db/migrator/: env.py
tenders/db/migrator/versions/: 2024-09-13_cd313817a14b_init_state_of_db.py
tenders/db/models/: __init__.py  bid.py  bid_history.py  employee.py  feedback.py  feedback_history.py  organization.py  organization_responsible.py  tender.py  tender_history.py
tenders/endpoints/: __init__.py  bid.py  ping.py  tender.py
tenders/schemas/: __init__.py  bid.py  tender.py
tenders/utils/: bid.py  bid_history.py  employee.py  organization.py  tender.py  tender_history.py
tests/: conftest.py  utils.py
tests/test_handlers/: test_health_check.py
tests/test_migrations/: test_stairway.py
